upd: some basic QT classes to start with

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,17 @@
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 
-qt6_standard_project_setup()
-
-qt6_add_executable(MomApp
+set(SOURCES
     src/main.cpp
+    src/MainWindow.cpp
+)
+
+set(HEADERS
+    src/MainWindow.h
+)
+
+qt6_add_executable(${PROJECT_NAME}
+    ${SOURCES}
+    ${HEADERS}
 )
 
 target_link_libraries(MomApp PRIVATE 
