upd: employee tab - calendar, inputs, popup WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${ROOT_DIR}/bin/debug)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ROOT_DIR}/bin/release)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${ROOT_DIR}/bin/minsizerel)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${ROOT_DIR}/bin/relwithdebinfo)
+SET(CMAKE_AUTOMOC ON)
+SET(CMAKE_AUTOUIC ON)
+SET(CMAKE_AUTORCC ON)
 
 include(src/CMakeLists.txt)
