--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,10 +3,14 @@ find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 set(SOURCES
     src/main.cpp
     src/MainWindow.cpp
+    src/EmployeesTab.cpp
+    src/TabsWidget.cpp
 )
 
 set(HEADERS
     src/MainWindow.h
+    src/EmployeesTab.h
+    src/TabsWidget.h
 )
 
 qt6_add_executable(${PROJECT_NAME}
