add: popup add employee window (needs to be worked on)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,12 +5,15 @@ set(SOURCES
     src/MainWindow.cpp
     src/EmployeesTab.cpp
     src/TabsWidget.cpp
+    src/AddEmployeePopup.cpp
 )
 
 set(HEADERS
     src/MainWindow.h
     src/EmployeesTab.h
     src/TabsWidget.h
+    src/AddEmployeePopup.h
+    src/Employee.h
 )
 
 qt6_add_executable(${PROJECT_NAME}
